src/App.css
/* ... */
@media (max-width: 650px) {

  .about-banner,
  .about-content {
      margin: var(--spacing-xsmall-percentage);
  }

  .container-main {
      width: 100%;
  }

  .project-title {
      display: grid;
      grid-template-columns: 1fr;
      grid-template-rows: 1fr;
      grid-template-areas: "image" "title";
      min-height: 500px;
      margin-top: 50px;
      margin-bottom: 50px;
      /* height: 100vh; */
  }

  .project-title-description {
      align-items: center;
      grid-area: title;
      overflow: hidden;
      padding: 0px;

      >p {
        text-align: center;
      }
      >h2,
      >.project-role{
          text-align: center;
      }
      >.project-tech{        
        align-content: center;
        >.tech-icon:nth-child(5),
        >.tech-icon:nth-child(1) {
          opacity: 0;
          width: 0;
        }
      }

      >.project-actions {
        >a>button {
            margin-right: var(--spacing-small);
            margin-left: var(--spacing-small);
            padding: 0.5em 1em;
        }
      }
  }

  .about-content {
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      grid-template-areas: "details details" "languages frameworks";
  }

  .project-title-image img {
      max-width: 100px;
      max-height: 200px;
  }

  .project-title-image {
      padding-top: 40px;
      padding-bottom: 20px;
      grid-area: image;
      display: grid;
      grid-template-columns: 1fr;
      grid-template-rows: 1fr;
      align-content: center;
      align-items: center;
      justify-content: center;
      justify-items: center;
  }

  .image-21,
  .image-22,
  .image-23,
  .image-31,
  .image-32,
  .image-33,
  .image-41,
  .image-42 {
      grid-area: 1/1/1/1;
      position: static;
      visibility: hidden;
  }

  .image-21,
  .image-32,
  .image-41 {
      visibility: visible;
  }

}

@media (max-width: 768px) {

  .container-main {
      width: 80%;
  }

  .project-title-image img {
      max-width: 150px;
      max-height: 250px;
  }

  .image-21,
  .image-22,
  .image-23 {
      border-radius: 20px;
  }

  .image-31,
  .image-32,
  .image-33 {
      border-radius: 15px;
  }

  .image-41 {
      right: 30px;
  }

  .project-title-description>* {
      margin: 10px;
  }

}

@media (max-width: 900px) {
  .project-title-description{
    >.project-actions {
      >a>button {
          /* margin-right: var(--spacing-xsmall);
          margin-left: var(--spacing-xsmall);
          padding: 0.3em 0.5em; */
          height: auto;
      }
    }
  }
}

@media (max-width: 1024px) {

  .about-content {
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
      grid-template-areas: "details details" "languages frameworks";
  }

  .project-title-image img {
      max-width: 200px;
      max-height: 300px;
  }

  .image-21,
  .image-22,
  .image-23 {
      border-radius: 25px;
  }

  .image-31,
  .image-32,
  .image-33 {
      border-radius: 20px;
  }

}

